@startuml
skinparam nodesep 10
hide circle
hide empty members
class "StressorChemical" [[{A chemical, that elicit a response (a phenotype) in a subject when when encountered through exposure.}]] {
    {field} manufacturer : string  
    {field} comment : string  
    {field} uuid(i) : string  
}
class "QuantityValue" [[{A value of an attribute that is quantitative and measurable, expressed as a combination of a unit and a numeric value}]] {
    {field} unit : string  
    {field} numeric_value : string  
}
class "Regimen" [[{The schedule and pattern of an exposure event.}]] {
    {field} exposure_regimen_type : ExposureRegimenTypeEnum  
    {field} number_of_individual_exposure : integer  
    {field} uuid(i) : string  
}
class "Phenotype" [[{Any measurable or visible trait change in the subject as a result of exposure.}]] {
    {field} stage : uriorcurie  
    {field} severity : SeverityEnum  
    {field} phenotype_term_id : uriorcurie  
    {field} uuid(i) : string  
}
"StressorChemical" *--> "1" "QuantityValue" : "concentration"
"Regimen" *--> "0..1" "QuantityValue" : "individual_exposure_duration"
"Regimen" *--> "0..1" "QuantityValue" : "interval_between_individual_exposures"
"Phenotype" *--> "0..1" "QuantityValue" : "prevalence"
"Regimen" *--> "0..1" "QuantityValue" : "total_exposure_duration"
class "ChemicalEntity" [[{The chemical used as the stressor chemical in an exposure event.}]] {
    {field} chebi_id : uriorcurie  
    {field} cas_id : string  
    {field} chemical_name : string  
    {field} synonym : string  [0..*]
    {field} uuid(i) : string  
}
class "ExposureEvent" [[{An occurrence in a study where a subject is exposed to a stressor under defined conditions.}]] {
    {field} vehicle : VehicleEnumeration  [0..*]
    {field} route : ExposureRouteEnum  
    {field} exposure_start_stage : uriorcurie  
    {field} exposure_end_stage : uriorcurie  
    {field} comment : string  
    {field} exposure_type : ExposureTypeEnum  
    {field} additional_exposure_condition : string  
    {field} uuid(i) : string  
}
abstract "Entity" [[{The base class for all entities in the Zebrafish Toxicology Atlas Schema.}]] {
    {field} uuid : string  
}
"StressorChemical" *--> "1" "ChemicalEntity" : "chemical_id"
"ExposureEvent" *--> "0..*" "StressorChemical" : "stressor"
"Entity" ^-- "StressorChemical"
"ExposureEvent" *--> "0..1" "Regimen" : "regimen"
"Entity" ^-- "Regimen"
class "PhenotypeObservationSet" [[{An observation set containing control and phenotypic outcome resulting from an exposure event.}]] {
    {field} uuid(i) : string  
}
"PhenotypeObservationSet" *--> "0..*" "Phenotype" : "phenotype"
"Entity" ^-- "Phenotype"
class "ControlImage" [[{An image associated with a control, taken at the same developmental stage as the corresponding phenotype observation.}]] {
    {field} phenotype_id : string  
    {field} magnification : string  
    {field} resolution : string  
    {field} scale_bar : string  
    {field} phenotype_comments : string  
    {field} uuid(i) : string  
}
class "Image" [[{An image associated with a phenotype observation.}]] {
    {field} magnification : string  
    {field} resolution : string  
    {field} scale_bar : string  
    {field} uuid(i) : string  
}
"PhenotypeObservationSet" *--> "0..*" "ControlImage" : "control_image"
"PhenotypeObservationSet" *--> "0..*" "Image" : "image"
"ExposureEvent" *--> "0..*" "PhenotypeObservationSet" : "phenotype_observation"
"Entity" ^-- "PhenotypeObservationSet"
"Entity" ^-- "Image"
class "Experiment" [[{A group of observations (phenotypic outcomes and their control) that are linked by a common exposure event and subject, and that are part of a study.}]] {
    {field} standard_rearing_condition : boolean  
    {field} rearing_condition_comment : string  
    {field} uuid(i) : string  
}
"Experiment" *--> "0..*" "ExposureEvent" : "exposure_event"
"Entity" ^-- "ExposureEvent"
class "Control" [[{A subject serves as a reference for assessing phenotypic outcome in the phenotype observation set.}]] {
    {field} control_type : string  
    {field} vehicle_if_treated : VehicleEnumeration  
    {field} comment : string  
    {field} uuid(i) : string  
}
class "Fish" [[{Zebrafish used as subject in the study.}]] {
    {field} id : uriorcurie  
    {field} name : string  
    {field} uuid(i) : string  
}
class "Study" [[{A toxicological investigation, including the experimental conditions and phenotypic outcomes, with information provenance.}]] {
    {field} publication : string  
    {field} annotator : uriorcurie  [0..*]
    {field} lab : uriorcurie  
    {field} uuid(i) : string  
}
"Experiment" *--> "0..*" "Control" : "control"
"Experiment" *--> "0..1" "Fish" : "fish"
"Study" *--> "0..*" "Experiment" : "experiment"
"Entity" ^-- "Experiment"
"Entity" ^-- "Study"
"Entity" ^-- "Fish"
"Entity" ^-- "ControlImage"
"Entity" ^-- "Control"
"Entity" ^-- "ChemicalEntity"
"Control" *--> "0..*" "ControlImage" : "control_image"
@enduml
